# auto-thumbnail

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  types.rs
src/thumbs/: image.rs  mod.rs  pdf.rs  video.rs
tests/: thumbnial.rs
