[package]
name = "auto-thumbnail"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Converts various file formats into thumbnail image."

repository = "https://github.com/siminx/auto-thumbnail"
homepage = "https://github.com/siminx/auto-thumbnail"

exclude = [
    "demo",
    "*.dll"
]

[dependencies]
anyhow = "1"
image = "0.25"
log = "0.4"
ndarray = "0.16"
oxipng = "9.1"
pdfium-render = "0.8"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tika-magic = "0.2"
video-rs = { version = "0.10", features = ["ndarray"] }
webp = "0.3"

[features]
default = ["full"]
image = []
video = []
pdf = []
full = [ "image", "video", "pdf"]
